--- a/view/visjsentdemo.html
+++ b/view/visjsentdemo.html
@@ -31,120 +31,120 @@ nodes = [{color:'rgb(255, 204, 0)',id:'0',label:'CNN',value:'1'},{color:'rgb(255
 
 // create connections between people
 // value corresponds with the amount of contact between two people
-edges = [{to:'CNN',title:'1',color:'rgb(100,100,100',from:'Bolton'},
-{to:'Mar-a-Lago',title:'1',color:'rgb(100,100,100',from:'Bolton'},
-{to:'Mattis',title:'1',color:'rgb(100,100,100',from:'Bolton'},
-{to:'Trump',title:'1',color:'rgb(100,100,100',from:'Bolton'},
-{to:'White House',title:'1',color:'rgb(100,100,100',from:'Bolton'},
-{to:'administration',title:'1',color:'rgb(100,100,100',from:'Bolton'},
-{to:'campaign',title:'1',color:'rgb(100,100,100',from:'Bolton'},
-{to:'time',title:'1',color:'rgb(100,100,100',from:'Bolton'},
-{to:'Mar-a-Lago',title:'1',color:'rgb(100,100,100',from:'CNN'},
-{to:'Novartis',title:'1',color:'rgb(100,100,100',from:'CNN'},
-{to:'White House',title:'1',color:'rgb(100,100,100',from:'CNN'},
-{to:'administration',title:'1',color:'rgb(100,100,100',from:'CNN'},
-{to:'campaign',title:'1',color:'rgb(100,100,100',from:'CNN'},
-{to:'club',title:'1',color:'rgb(100,100,100',from:'CNN'},
-{to:'president',title:'1',color:'rgb(100,100,100',from:'CNN'},
-{to:'time',title:'1',color:'rgb(100,100,100',from:'CNN'},
-{to:'CNN',title:'1',color:'rgb(100,100,100',from:'Cohen'},
-{to:'Donald Trump',title:'1',color:'rgb(100,100,100',from:'Cohen'},
-{to:'Mar-a-Lago',title:'1',color:'rgb(100,100,100',from:'Cohen'},
-{to:'Novartis',title:'1',color:'rgb(100,100,100',from:'Cohen'},
-{to:'Trump',title:'1',color:'rgb(100,100,100',from:'Cohen'},
-{to:'White House',title:'1',color:'rgb(100,100,100',from:'Cohen'},
-{to:'administration',title:'1',color:'rgb(100,100,100',from:'Cohen'},
-{to:'campaign',title:'1',color:'rgb(100,100,100',from:'Cohen'},
-{to:'club',title:'1',color:'rgb(100,100,100',from:'Cohen'},
-{to:'president',title:'1',color:'rgb(100,100,100',from:'Cohen'},
-{to:'time',title:'1',color:'rgb(100,100,100',from:'Cohen'},
-{to:'Mar-a-Lago',title:'1',color:'rgb(100,100,100',from:'Donald Trump'},
-{to:'Secret Service',title:'1',color:'rgb(100,100,100',from:'Donald Trump'},
-{to:'State Department',title:'1',color:'rgb(100,100,100',from:'Donald Trump'},
-{to:'Trump',title:'1',color:'rgb(100,100,100',from:'Donald Trump'},
-{to:'White House',title:'1',color:'rgb(100,100,100',from:'Donald Trump'},
-{to:'administration',title:'1',color:'rgb(100,100,100',from:'Donald Trump'},
-{to:'campaign',title:'1',color:'rgb(100,100,100',from:'Donald Trump'},
-{to:'club',title:'1',color:'rgb(100,100,100',from:'Donald Trump'},
-{to:'president',title:'1',color:'rgb(100,100,100',from:'Donald Trump'},
-{to:'time',title:'1',color:'rgb(100,100,100',from:'Donald Trump'},
-{to:'xi',title:'1',color:'rgb(100,100,100',from:'Donald Trump'},
-{to:'Mar-a-Lago',title:'1',color:'rgb(100,100,100',from:'Donnelly'},
-{to:'Secret Service',title:'1',color:'rgb(100,100,100',from:'Donnelly'},
-{to:'Trump',title:'1',color:'rgb(100,100,100',from:'Donnelly'},
-{to:'White House',title:'1',color:'rgb(100,100,100',from:'Donnelly'},
-{to:'club',title:'1',color:'rgb(100,100,100',from:'Donnelly'},
-{to:'president',title:'1',color:'rgb(100,100,100',from:'Donnelly'},
-{to:'time',title:'1',color:'rgb(100,100,100',from:'Donnelly'},
-{to:'Novartis',title:'1',color:'rgb(100,100,100',from:'Mar-a-Lago'},
-{to:'Secret Service',title:'1',color:'rgb(100,100,100',from:'Mar-a-Lago'},
-{to:'State Department',title:'1',color:'rgb(100,100,100',from:'Mar-a-Lago'},
-{to:'White House',title:'1',color:'rgb(100,100,100',from:'Mar-a-Lago'},
-{to:'administration',title:'1',color:'rgb(100,100,100',from:'Mar-a-Lago'},
-{to:'campaign',title:'1',color:'rgb(100,100,100',from:'Mar-a-Lago'},
-{to:'club',title:'1',color:'rgb(100,100,100',from:'Mar-a-Lago'},
-{to:'president',title:'1',color:'rgb(100,100,100',from:'Mar-a-Lago'},
-{to:'time',title:'1',color:'rgb(100,100,100',from:'Mar-a-Lago'},
-{to:'xi',title:'1',color:'rgb(100,100,100',from:'Mar-a-Lago'},
-{to:'CNN',title:'1',color:'rgb(100,100,100',from:'Mattis'},
-{to:'Mar-a-Lago',title:'1',color:'rgb(100,100,100',from:'Mattis'},
-{to:'Trump',title:'1',color:'rgb(100,100,100',from:'Mattis'},
-{to:'White House',title:'1',color:'rgb(100,100,100',from:'Mattis'},
-{to:'administration',title:'1',color:'rgb(100,100,100',from:'Mattis'},
-{to:'campaign',title:'1',color:'rgb(100,100,100',from:'Mattis'},
-{to:'time',title:'1',color:'rgb(100,100,100',from:'Mattis'},
-{to:'White House',title:'1',color:'rgb(100,100,100',from:'Novartis'},
-{to:'administration',title:'1',color:'rgb(100,100,100',from:'Novartis'},
-{to:'campaign',title:'1',color:'rgb(100,100,100',from:'Novartis'},
-{to:'club',title:'1',color:'rgb(100,100,100',from:'Novartis'},
-{to:'president',title:'1',color:'rgb(100,100,100',from:'Novartis'},
-{to:'time',title:'1',color:'rgb(100,100,100',from:'Novartis'},
-{to:'State Department',title:'1',color:'rgb(100,100,100',from:'Secret Service'},
-{to:'White House',title:'1',color:'rgb(100,100,100',from:'Secret Service'},
-{to:'administration',title:'1',color:'rgb(100,100,100',from:'Secret Service'},
-{to:'club',title:'1',color:'rgb(100,100,100',from:'Secret Service'},
-{to:'president',title:'1',color:'rgb(100,100,100',from:'Secret Service'},
-{to:'time',title:'1',color:'rgb(100,100,100',from:'Secret Service'},
-{to:'xi',title:'1',color:'rgb(100,100,100',from:'Secret Service'},
-{to:'White House',title:'1',color:'rgb(100,100,100',from:'State Department'},
-{to:'administration',title:'1',color:'rgb(100,100,100',from:'State Department'},
-{to:'club',title:'1',color:'rgb(100,100,100',from:'State Department'},
-{to:'president',title:'1',color:'rgb(100,100,100',from:'State Department'},
-{to:'time',title:'1',color:'rgb(100,100,100',from:'State Department'},
-{to:'xi',title:'1',color:'rgb(100,100,100',from:'State Department'},
-{to:'CNN',title:'1',color:'rgb(100,100,100',from:'Trump'},
-{to:'Mar-a-Lago',title:'1',color:'rgb(100,100,100',from:'Trump'},
-{to:'Novartis',title:'1',color:'rgb(100,100,100',from:'Trump'},
-{to:'Secret Service',title:'1',color:'rgb(100,100,100',from:'Trump'},
-{to:'State Department',title:'1',color:'rgb(100,100,100',from:'Trump'},
-{to:'White House',title:'1',color:'rgb(100,100,100',from:'Trump'},
-{to:'administration',title:'1',color:'rgb(100,100,100',from:'Trump'},
-{to:'campaign',title:'1',color:'rgb(100,100,100',from:'Trump'},
-{to:'club',title:'1',color:'rgb(100,100,100',from:'Trump'},
-{to:'president',title:'1',color:'rgb(100,100,100',from:'Trump'},
-{to:'time',title:'1',color:'rgb(100,100,100',from:'Trump'},
-{to:'xi',title:'1',color:'rgb(100,100,100',from:'Trump'},
-{to:'administration',title:'1',color:'rgb(100,100,100',from:'White House'},
-{to:'campaign',title:'1',color:'rgb(100,100,100',from:'White House'},
-{to:'club',title:'1',color:'rgb(100,100,100',from:'White House'},
-{to:'president',title:'1',color:'rgb(100,100,100',from:'White House'},
-{to:'time',title:'1',color:'rgb(100,100,100',from:'White House'},
-{to:'xi',title:'1',color:'rgb(100,100,100',from:'White House'},
-{to:'campaign',title:'1',color:'rgb(100,100,100',from:'administration'},
-{to:'club',title:'1',color:'rgb(100,100,100',from:'administration'},
-{to:'president',title:'1',color:'rgb(100,100,100',from:'administration'},
-{to:'time',title:'1',color:'rgb(100,100,100',from:'administration'},
-{to:'xi',title:'1',color:'rgb(100,100,100',from:'administration'},
-{to:'club',title:'1',color:'rgb(100,100,100',from:'campaign'},
-{to:'president',title:'1',color:'rgb(100,100,100',from:'campaign'},
-{to:'time',title:'1',color:'rgb(100,100,100',from:'campaign'},
-{to:'xi',title:'1',color:'rgb(100,100,100',from:'campaign'},
-{to:'president',title:'1',color:'rgb(100,100,100',from:'club'},
-{to:'time',title:'1',color:'rgb(100,100,100',from:'club'},
-{to:'xi',title:'1',color:'rgb(100,100,100',from:'club'},
-{to:'time',title:'1',color:'rgb(100,100,100',from:'president'},
-{to:'xi',title:'1',color:'rgb(100,100,100',from:'president'},
-{to:'xi',title:'1',color:'rgb(100,100,100',from:'time'}];
+edges = [{to:'0',title:'1',color:'rgb(100,100,100',from:'2'},
+{to:'10',title:'1',color:'rgb(100,100,100',from:'2'},
+{to:'7',title:'1',color:'rgb(100,100,100',from:'2'},
+{to:'11',title:'1',color:'rgb(100,100,100',from:'2'},
+{to:'1',title:'1',color:'rgb(100,100,100',from:'2'},
+{to:'8',title:'1',color:'rgb(100,100,100',from:'2'},
+{to:'12',title:'1',color:'rgb(100,100,100',from:'2'},
+{to:'6',title:'1',color:'rgb(100,100,100',from:'2'},
+{to:'10',title:'1',color:'rgb(100,100,100',from:'0'},
+{to:'14',title:'1',color:'rgb(100,100,100',from:'0'},
+{to:'1',title:'1',color:'rgb(100,100,100',from:'0'},
+{to:'8',title:'1',color:'rgb(100,100,100',from:'0'},
+{to:'12',title:'1',color:'rgb(100,100,100',from:'0'},
+{to:'15',title:'1',color:'rgb(100,100,100',from:'0'},
+{to:'4',title:'1',color:'rgb(100,100,100',from:'0'},
+{to:'6',title:'1',color:'rgb(100,100,100',from:'0'},
+{to:'0',title:'1',color:'rgb(100,100,100',from:'5'},
+{to:'3',title:'1',color:'rgb(100,100,100',from:'5'},
+{to:'10',title:'1',color:'rgb(100,100,100',from:'5'},
+{to:'14',title:'1',color:'rgb(100,100,100',from:'5'},
+{to:'11',title:'1',color:'rgb(100,100,100',from:'5'},
+{to:'1',title:'1',color:'rgb(100,100,100',from:'5'},
+{to:'8',title:'1',color:'rgb(100,100,100',from:'5'},
+{to:'12',title:'1',color:'rgb(100,100,100',from:'5'},
+{to:'15',title:'1',color:'rgb(100,100,100',from:'5'},
+{to:'4',title:'1',color:'rgb(100,100,100',from:'5'},
+{to:'6',title:'1',color:'rgb(100,100,100',from:'5'},
+{to:'10',title:'1',color:'rgb(100,100,100',from:'3'},
+{to:'13',title:'1',color:'rgb(100,100,100',from:'3'},
+{to:'16',title:'1',color:'rgb(100,100,100',from:'3'},
+{to:'11',title:'1',color:'rgb(100,100,100',from:'3'},
+{to:'1',title:'1',color:'rgb(100,100,100',from:'3'},
+{to:'8',title:'1',color:'rgb(100,100,100',from:'3'},
+{to:'12',title:'1',color:'rgb(100,100,100',from:'3'},
+{to:'15',title:'1',color:'rgb(100,100,100',from:'3'},
+{to:'4',title:'1',color:'rgb(100,100,100',from:'3'},
+{to:'6',title:'1',color:'rgb(100,100,100',from:'3'},
+{to:'9',title:'1',color:'rgb(100,100,100',from:'3'},
+{to:'10',title:'1',color:'rgb(100,100,100',from:'17'},
+{to:'13',title:'1',color:'rgb(100,100,100',from:'17'},
+{to:'11',title:'1',color:'rgb(100,100,100',from:'17'},
+{to:'1',title:'1',color:'rgb(100,100,100',from:'17'},
+{to:'15',title:'1',color:'rgb(100,100,100',from:'17'},
+{to:'4',title:'1',color:'rgb(100,100,100',from:'17'},
+{to:'6',title:'1',color:'rgb(100,100,100',from:'17'},
+{to:'14',title:'1',color:'rgb(100,100,100',from:'10'},
+{to:'13',title:'1',color:'rgb(100,100,100',from:'10'},
+{to:'16',title:'1',color:'rgb(100,100,100',from:'10'},
+{to:'1',title:'1',color:'rgb(100,100,100',from:'10'},
+{to:'8',title:'1',color:'rgb(100,100,100',from:'10'},
+{to:'12',title:'1',color:'rgb(100,100,100',from:'10'},
+{to:'15',title:'1',color:'rgb(100,100,100',from:'10'},
+{to:'4',title:'1',color:'rgb(100,100,100',from:'10'},
+{to:'6',title:'1',color:'rgb(100,100,100',from:'10'},
+{to:'9',title:'1',color:'rgb(100,100,100',from:'10'},
+{to:'0',title:'1',color:'rgb(100,100,100',from:'7'},
+{to:'10',title:'1',color:'rgb(100,100,100',from:'7'},
+{to:'11',title:'1',color:'rgb(100,100,100',from:'7'},
+{to:'1',title:'1',color:'rgb(100,100,100',from:'7'},
+{to:'8',title:'1',color:'rgb(100,100,100',from:'7'},
+{to:'12',title:'1',color:'rgb(100,100,100',from:'7'},
+{to:'6',title:'1',color:'rgb(100,100,100',from:'7'},
+{to:'1',title:'1',color:'rgb(100,100,100',from:'14'},
+{to:'8',title:'1',color:'rgb(100,100,100',from:'14'},
+{to:'12',title:'1',color:'rgb(100,100,100',from:'14'},
+{to:'15',title:'1',color:'rgb(100,100,100',from:'14'},
+{to:'4',title:'1',color:'rgb(100,100,100',from:'14'},
+{to:'6',title:'1',color:'rgb(100,100,100',from:'14'},
+{to:'16',title:'1',color:'rgb(100,100,100',from:'13'},
+{to:'1',title:'1',color:'rgb(100,100,100',from:'13'},
+{to:'8',title:'1',color:'rgb(100,100,100',from:'13'},
+{to:'15',title:'1',color:'rgb(100,100,100',from:'13'},
+{to:'4',title:'1',color:'rgb(100,100,100',from:'13'},
+{to:'6',title:'1',color:'rgb(100,100,100',from:'13'},
+{to:'9',title:'1',color:'rgb(100,100,100',from:'13'},
+{to:'1',title:'1',color:'rgb(100,100,100',from:'16'},
+{to:'8',title:'1',color:'rgb(100,100,100',from:'16'},
+{to:'15',title:'1',color:'rgb(100,100,100',from:'16'},
+{to:'4',title:'1',color:'rgb(100,100,100',from:'16'},
+{to:'6',title:'1',color:'rgb(100,100,100',from:'16'},
+{to:'9',title:'1',color:'rgb(100,100,100',from:'16'},
+{to:'0',title:'1',color:'rgb(100,100,100',from:'11'},
+{to:'10',title:'1',color:'rgb(100,100,100',from:'11'},
+{to:'14',title:'1',color:'rgb(100,100,100',from:'11'},
+{to:'13',title:'1',color:'rgb(100,100,100',from:'11'},
+{to:'16',title:'1',color:'rgb(100,100,100',from:'11'},
+{to:'1',title:'1',color:'rgb(100,100,100',from:'11'},
+{to:'8',title:'1',color:'rgb(100,100,100',from:'11'},
+{to:'12',title:'1',color:'rgb(100,100,100',from:'11'},
+{to:'15',title:'1',color:'rgb(100,100,100',from:'11'},
+{to:'4',title:'1',color:'rgb(100,100,100',from:'11'},
+{to:'6',title:'1',color:'rgb(100,100,100',from:'11'},
+{to:'9',title:'1',color:'rgb(100,100,100',from:'11'},
+{to:'8',title:'1',color:'rgb(100,100,100',from:'1'},
+{to:'12',title:'1',color:'rgb(100,100,100',from:'1'},
+{to:'15',title:'1',color:'rgb(100,100,100',from:'1'},
+{to:'4',title:'1',color:'rgb(100,100,100',from:'1'},
+{to:'6',title:'1',color:'rgb(100,100,100',from:'1'},
+{to:'9',title:'1',color:'rgb(100,100,100',from:'1'},
+{to:'12',title:'1',color:'rgb(100,100,100',from:'8'},
+{to:'15',title:'1',color:'rgb(100,100,100',from:'8'},
+{to:'4',title:'1',color:'rgb(100,100,100',from:'8'},
+{to:'6',title:'1',color:'rgb(100,100,100',from:'8'},
+{to:'9',title:'1',color:'rgb(100,100,100',from:'8'},
+{to:'15',title:'1',color:'rgb(100,100,100',from:'12'},
+{to:'4',title:'1',color:'rgb(100,100,100',from:'12'},
+{to:'6',title:'1',color:'rgb(100,100,100',from:'12'},
+{to:'9',title:'1',color:'rgb(100,100,100',from:'12'},
+{to:'4',title:'1',color:'rgb(100,100,100',from:'15'},
+{to:'6',title:'1',color:'rgb(100,100,100',from:'15'},
+{to:'9',title:'1',color:'rgb(100,100,100',from:'15'},
+{to:'6',title:'1',color:'rgb(100,100,100',from:'4'},
+{to:'9',title:'1',color:'rgb(100,100,100',from:'4'},
+{to:'9',title:'1',color:'rgb(100,100,100',from:'6'}];
 
 
 // Instantiate our network object.
