--- a/templates/main.html
+++ b/templates/main.html
@@ -1,20 +1,28 @@
 <!doctype html>
-<!--<script type="text/javascript" src="{{ url_for('static', filename = 'mootools-custom.js') }}"></script>-->
-<script src="https://fastcdn.org/MooTools/1.5.2/MooTools-Core-compat-compressed.js"></script>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://fastcdn.org/MooTools/1.5.2/MooTools-Core-compat-compressed.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>-->
+    <title>Hello from Flask</title>
+</head>
+<body>
 
-<title>Hello from Flask</title>
-{% if name %}
-<h1>Hello {{ name }}!</h1>
-{% else %}
-<h1>Hello, World!</h1>
-{% endif %}
-<div id="receptor">top toot</div>
+<!--{% if name %}-->
+<!--<h1>Hello {{ name }}!</h1>-->
+<!--{% else %}-->
+<!--<h1>Hello, World!</h1>-->
+<!--{% endif %}-->
 
-<form id="search_form">
-  <input type="text" id=search_field" name="search_field">
-</form>
+<div class="container-fluid" id="content">
+    <div id="receptor"></div>
+    <form id="search_form" method="get" onsubmit="backend_call(); return false;">
+        <input type="text" id=search_field" name="keyword">
+        <button onclick="backend_call();">go</button>
+    </form>
 
-<button onclick="backend_call();">joel</button>
+</div>
 <script>
 
     var recepdiv = document.id('receptor');
@@ -35,6 +43,12 @@
 });
 myRequest.send();
     }
-</script>
 
+
+</script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
+</body>
 </html>
