--- a/templates/main.html
+++ b/templates/main.html
@@ -3,11 +3,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://fastcdn.org/MooTools/1.5.2/MooTools-Core-compat-compressed.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>-->
-    <title>Hello from Flask</title>
+    <title>Congruence</title>
 </head>
-<body>
+<body class="text-center">
 
 <!--{% if name %}-->
 <!--<h1>Hello {{ name }}!</h1>-->
@@ -15,13 +18,34 @@
 <!--<h1>Hello, World!</h1>-->
 <!--{% endif %}-->
 
-<div class="container-fluid" id="content">
-    <div id="receptor"></div>
-    <form id="search_form" method="get" onsubmit="backend_call(); return false;">
-        <input type="text" id=search_field" name="keyword">
-        <button onclick="backend_call();">go</button>
-    </form>
-
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column" id="content">
+    <header class="masthead mb-auto">
+        <div class="row">
+            <div class="col">
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                         aria-valuemax="100"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm"></div>
+            <div class="col-sm">
+                <div id="receptor"></div>
+                <form id="search_form" method="get" onsubmit="backend_call(); return false;">
+                    <input type="text" id="search_field" name="keyword">
+                    <button onclick="backend_call();">go</button>
+                </form>
+            </div>
+            <div class="col-sm">
+                <ul>
+                    <li><img src="https://us.v-cdn.net/5021068/uploads/userpics/620/p3TNH1ATZKBG4.png"></li>
+                    <li><img src="https://78.media.tumblr.com/avatar_8e7842a29083_128.pnj"></li>
+                    <li><img src="https://78.media.tumblr.com/avatar_f53d371062e3_128.pnj"></li>
+                </ul>
+            </div>
+        </div>
+    </header>
 </div>
 <script>
 
@@ -45,10 +69,18 @@ myRequest.send();
     }
 
 
+
 </script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+        integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
