--- a/templates/main.html
+++ b/templates/main.html
@@ -32,6 +32,7 @@
                     <input type="text" id="search_field" name="keyword">
                     <button onclick="backend_call();" class="btn btn-primary">go</button>
                 </form>
+                <input type="text" id="stream_field" name="keyword">
             </div>
             <div class="col-sm">
                 <ul>
